# LidarCameraSimUnity

./: ..gitignore.un~  .gitignore  .gitignore~  UpgradeLog2.htm  UpgradeLog3.htm  mono_crash.a569772c8.0.json  mono_crash.a569772c8.1.json  mono_crash.a569772c8.2.json  mono_crash.a569772c8.3.json
Assets/: AddTracks.cs  CarInputController.cs  FollowCar.cs  GameAssembly.asmdef  GameManager.cs  InitTestScene638024069780987901.unity  InitTestScene638024078329923019.unity  RoadDataFile.json  TrackChanger.cs  TrackManager.cs  gss.cs  road.cs  scr.cs
Assets/LoadTrackScripts/: ConeArrayManager.cs  JsonReadWriteManager.cs  NodeData.cs
Assets/Materials/: Floor.mat  frict.physicMaterial  新建渲染器纹理.mat
Assets/Prefabs/: AccelerationScene.unity  Car 1.prefab  Car.prefab  blue.prefab  yellow.prefab
Assets/RenderTextures/: miniACC.renderTexture  miniCUST.renderTexture  miniendu.renderTexture  miniskid.renderTexture  新建渲染器纹理.renderTexture
Assets/Resources/: Camera.prefab  Car.prefab  CarBasic.prefab
Assets/Scenes/: SampleScene.unity
Assets/Scripts/: AddTracks.cs  CarInputController.cs  Doxyfile  FollowCar.cs  MiniMapCameraController.cs  TrackManager.cs  comInt.cs  getRenderTexture.cs
Assets/Tests/: PublishingAndSubscribingTest.cs
Assets/UI Toolkit/: ChangeTrack.cs  ChangeTrack.uxml  MainMenuManger.cs  MainMenuTemplate.uxml
Assets/VehicleMesh/: Tire.mat
Assets/fdx/: Concrete.fbx  Concrete.mat
Assets/input/: Input.inputactions
Documentation/html/: AddTracks_8cs.html  AutoPathFollower_8cs.html  BaseMessage_8cs.html  CameraExternalCalibration_8cs.html  CarCameraController_8cs.html  CarController_8cs.html  CarInputController_8cs.html  CarStateMessage_8cs.html  ConePathPlacer_8cs.html  ControlResultMessage_8cs.html  FollowCar_8cs.html  GssController_8cs.html  Imu__Controller_8cs.html  InterfaceController_8cs.html  LidarController_8cs.html  PIDController_8cs.html  (+164 more)
ProjectSettings/: ProjectSettings.asset
UserSettings/: EditorUserSettings.asset  Search.settings
html/: md_README.html  pages.html
latex/: md_README.tex  refman.tex
sandboxeProjects/: cvpy.py  publisher.py
sandboxeProjects/sub&Pub/: CMakeLists.txt  main.cpp
sandboxeProjects/sub&Pub/include/: ICamera.h  interface_lidar.hpp  publisher.h  simulated_camera.h  simulated_lidar.hpp  subscriber.h
sandboxeProjects/sub&Pub/src/: publisher.cpp  simulated_camera.cpp  simulated_lidar.cpp  subscriber.cpp
(+285 files in other folders)
